--- a/OldRecipeAppGUI/RecipeAppGUI.csproj
+++ b/OldRecipeAppGUI/RecipeAppGUI.csproj
@@ -9,6 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="resources\user-guide.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="App.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Jose_ST10376126_PROG6221_POE\Jose_ST10376126_PROG6221_POE.csproj" />
   </ItemGroup>
 
