--- a/RecipeAppGUI/RecipeAppGUI.csproj
+++ b/RecipeAppGUI/RecipeAppGUI.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="resources\user-guide.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="resources\user-guide.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Jose_ST10376126_PROG6221_POE\Jose_ST10376126_PROG6221_POE.csproj" />
   </ItemGroup>
 
